Fix T73696: Text editor scroll glitch

Scrolling a short text buffer could show the cursor offset.